# ai_readiness

./: .env.example  README.md  debug_runner.py  debug_server.py  main.py  pyproject.toml  requirements.txt  run_tests.sh
src/: __init__.py  config.py  server.py
src/core/: __init__.py  api_client.py  cache_manager.py  exceptions.py  schema_manager.py
src/integrations/: __init__.py  bigquery_client.py  catalog_api.py  metadata_api.py  mock_api.py
src/tools/: __init__.py  analysis.py  compliance.py  discovery.py  query.py
tests/: __init__.py  conftest.py  test_analysis_tool.py  test_cache_manager.py  test_compliance_tool.py  test_discovery_tool.py  test_integration.py  test_query_tool.py  test_schema_manager.py
